Finished Initial InstBot
Need to refactor to use the new Instagram APIs... Soon TM

--- a/InstBot/settings.json
+++ b/InstBot/settings.json
@@ -6,8 +6,8 @@
       "database": "instabot"
     },
     "instagram": {
-      "user": "",
-      "pass": ""
+      "user": "Cashinit",
+      "pass": "1#Fern!3"
     },
     "config": {
       "days_to_unfollow": 1,
